# agent-memory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  RUNNING_LOCALLY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent_memory/: __init__.py  _version.py  benchmark.py  cli.py  decision.py  eval.py  explain.py  manager.py  models.py  policy.py  retriever.py  sqlite_store.py  store.py  ttl.py
benchmarks/: README.md
benchmarks/datasets/: coding_agent.json  customer_support.json  research_agent.json
docs/: README.md  architecture.md  benchmarks.md  examples.md  faq.md  getting-started.md  memory-model.md  policies.md
examples/: basic_usage.py
mcp_server/: server.py
tests/: __init__.py  test_backends.py  test_memory.py  test_v03.py
