[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory"
version = "0.3.0"
description = "Persistent semantic memory for AI agents with replay, restore, verify, and ignore decisions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "chromadb>=0.5.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"
agent-memory-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_memory", "mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
