[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-sdk"
description = "Persistent semantic memory for AI agents with replay, restore, verify, and ignore decisions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.5.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
]

[project.scripts]
agent-memory = "agent_memory.cli:main"
agent-memory-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["agent_memory", "mcp_server"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "agent_memory/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
